<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="homeProxy"
            type="cn.qinguide.f5web.via.repertory.proxy.HomeProxy" />
    </data>

    <FrameLayout style="@style/MatchParentLayout">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView_home"
            style="@style/MatchParentLayout">

            <LinearLayout
                style="@style/MatchParentLayout"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView_disable_home"
                    style="@style/HeightWrapLayout"
                    app:cardCornerRadius="0dp"
                    app:elevation="2dp">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_home"
                        style="@style/HeightWrapLayout"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="12dp"
                        android:checked="false"
                        android:onCheckedChanged="@{(buttonView,isChecked)->homeProxy.active(buttonView,isChecked)}"
                        android:text="@string/functionFive_status"
                        android:textSize="16sp" />

                </android.support.v7.widget.CardView>

                <LinearLayout
                    style="@style/HeightWrapLayout"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        style="@style/HeightWrapLayout"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            style="@style/HeightWrapLayout"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/frame_layout_status_home"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:foregroundGravity="center">

                                <android.support.v7.widget.AppCompatImageView
                                    android:id="@+id/imageView_tips"
                                    android:layout_width="84dp"
                                    android:layout_height="84dp"
                                    android:layout_gravity="center" />

                            </FrameLayout>

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/textView_tips_home"
                                style="@style/HeightWrapLayout"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="6dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <include
                    layout="@layout/item_card"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_home"
                    style="@style/MatchParentLayout"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/float_menu_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimaryDark">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/float_button_script"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view)-> homeProxy.createScript(view)}"
                android:src="@drawable/ic_module_min"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_colorPressed="@color/colorAccent"
                fab:fab_label="@string/create_script"
                fab:fab_size="mini" />


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/float_button_inject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->homeProxy.addInject(view)}"
                android:src="@drawable/ic_debug_min"
                fab:fab_colorNormal="@color/red"
                fab:fab_colorPressed="@color/red"
                fab:fab_label="@string/add_inject"
                fab:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>

    </FrameLayout>

</layout>